hphp/hack/test/extracted_from_manual/10-types/86-with-refinement-box-with-type+ctx.hack.exp
ERROR: File "86-with-refinement-box-with-type+ctx.hack", line 51, characters 7-10:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
